--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="family">نام خانوادگی</string>
     <string name="email">ایمیل</string>
     <string name="txt">متن مورد نظر</string>
+    <string name="title">اطلاعات پرسنلی</string>
 </resources>
