create SET Button for Dialog

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="email">ایمیل</string>
     <string name="txt">متن مورد نظر</string>
     <string name="title">اطلاعات پرسنلی</string>
+    <string name="set">ثبت</string>
 </resources>
