create cancel Button for My Custom Dialog

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="txt">متن مورد نظر</string>
     <string name="title">اطلاعات پرسنلی</string>
     <string name="set">ثبت</string>
+    <string name="cancel">انصراف</string>
 </resources>
